tests/NormalTests/paczka1/small_fuzzy/23313396.err
Error in line 2: D89FBqmWVc S637 49,4
Error in line 5: SiR A702 74,8
Error in line 7: D89FBqmWVc S850 47,5
Error in line 8: SiR S850 99,4
Error in line 12: SiR A548 58,8
